# Compound

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CompoundTest  LICENSE  README.md  catlog.c  common.h  function.h  install  postinstall  preinstall  report.c  report.h  test.c
.github/workflows/: cmake-multi-platform.yml
Array/include/: array.h
Array/src/: array.c
MemMan/src/: memman.c
Status/: StatusTest  status_test.c
Status/include/: status.h
Status/src/: status.c
String/include/: string.h
Utils/include/: test.c  utils.h
Utils/src/: utils.c
Var/: VarTest  test.c
Var/include/: var.h
Var/src/: var.c
doc/: READONLY  TERM.md
doc/variadic/: PREFIX.md
inc/: .stack.h  access_permission_qualifier.h  array.h  catlog.h  char.h  class.h  class_constructor.h  class_field.h  class_method.h  class_method_parameter.h  class_register.h  common.h  constructor.h  destructor.h  file.h  format.h  function.h  lifespan_qualifier.h  literary.h  memman.h  memory.h  memory_stack.h  object.h  pen.h  platform.h  registry.h  stack.h  status.h  status_stack.h  string.h  timedate.h  type.h  utils.h  var.h
inc/Type/: Boolean.h
src/: .stack.c  Boolean.c  array.c  catlog.c  class.c  class_field.c  class_method.c  class_register.c  format.c  memman.c  memory.c  memory_stack.c  object.c  report.c  stack.c  status.c  status_stack.c  string.c  type.c  var.c
